deployment/keycloak/kustomize/base/deployment-manifest/deployment-postgres.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak-postgresql
  labels:
    app: keycloak-postgresql
    app.kubernetes.io/part-of: keycloak
    deployment: keycloak-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: keycloak-postgresql
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: keycloak-postgresql
        deployment: keycloak-postgresql
    spec:
      volumes:
        - name: keycloak-postgresql-claim
          persistentVolumeClaim:
            claimName: keycloak-postgresql-claim
      containers:
        - resources: {}
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-c'
                - >-
                  psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d
                  $POSTGRESQL_DATABASE -c 'SELECT 1'
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: postgresql
          securityContext: {}
          ports:
            - containerPort: 5432
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: keycloak-postgresql-claim
              mountPath: /var/lib/pgsql/data
          terminationMessagePolicy: File
          image: 'quay.io/osclimate/postgresql-13:1-101'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
