deployment/keycloak/kustomize/base/deployment-manifest/service-keycloak.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak
  labels:
    app: keycloak
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: keycloak-service
spec:
  ports:
    - name: 8443-http
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    deployment: keycloak
