deployment/keycloak/kustomize/base/deployment-manifest/route-keycloak.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  path: /
  to:
    kind: Service
    name: keycloak
    weight: 100
  port:
    targetPort: 8443
  tls:
    termination: reencrypt
  wildcardPolicy: None
